@@ -1,89 +1,0 @@
-/* XPM */
-static char * book_open_xpm[] = {
-"16 16 70 1",
-" 	c None",
-".	c #7F7F7F",
-"+	c #B7B7B7",
-"@	c #6D6D6D",
-"#	c #CCCCCC",
-"$	c #F0F0F0",
-"%	c #5F5F5F",
-"&	c #E2E2E2",
-"*	c #EEEEEE",
-"=	c #E4E4E4",
-"-	c #6C6C6C",
-";	c #E5E5E5",
-">	c #ECECEC",
-",	c #EBEBEB",
-"'	c #EDEDED",
-")	c #595959",
-"!	c #E1E1E1",
-"~	c #DFDFDF",
-"{	c #EAEAEA",
-"]	c #DEDEDE",
-"^	c #505050",
-"/	c #EFEFEF",
-"(	c #CBCBCB",
-"_	c #D2D2D2",
-":	c #F2F2F2",
-"<	c #F6F6F6",
-"[	c #E6E6E6",
-"}	c #A2A2A2",
-"|	c #000000",
-"1	c #AAAAAA",
-"2	c #DADADA",
-"3	c #CDCDCD",
-"4	c #B6B6B6",
-"5	c #4B4B4B",
-"6	c #2D2D2D",
-"7	c #BEBEBE",
-"8	c #BCBCBC",
-"9	c #A8A8A8",
-"0	c #F3F3F3",
-"a	c #757575",
-"b	c #2E2E2E",
-"c	c #5C5C5C",
-"d	c #909090",
-"e	c #C6C6C6",
-"f	c #F1F1F1",
-"g	c #606060",
-"h	c #696969",
-"i	c #898989",
-"j	c #A0A0A0",
-"k	c #E8E8E8",
-"l	c #E7E7E7",
-"m	c #808080",
-"n	c #111111",
-"o	c #3C3C3C",
-"p	c #C4C4C4",
-"q	c #646464",
-"r	c #161616",
-"s	c #030303",
-"t	c #0C0C0C",
-"u	c #ABABAB",
-"v	c #C3C3C3",
-"w	c #858585",
-"x	c #363636",
-"y	c #1C1C1C",
-"z	c #2C2C2C",
-"A	c #A4A4A4",
-"B	c #A6A6A6",
-"C	c #717171",
-"D	c #171717",
-"E	c #121212",
-"                ",
-"     .+         ",
-"    @#$$        ",
-"   %&*=$        ",
-"  -;>,'>,       ",
-" )!='~{]&       ",
-" ^,/=${{(_:<<[} ",
-" |1*$={23;,><45 ",
-"  67$;89;/0*2ab ",
-"   c,_deff0*1g| ",
-"   |hijk$lf!m6  ",
-"   |nop{<<<4qr  ",
-"    stgu7(vwx   ",
-"      yz)ABC|   ",
-"         |DE    ",
-"                "};
