@@ -1,77 +1,0 @@
-/* XPM */
-static char * book_red_xpm[] = {
-"16 16 58 1",
-" 	c None",
-".	c #613D3D",
-"+	c #704949",
-"@	c #6A4040",
-"#	c #000000",
-"$	c #291818",
-"%	c #A97070",
-"&	c #A16262",
-"*	c #9F6060",
-"=	c #352020",
-"-	c #B6B6B5",
-";	c #6C4646",
-">	c #A56969",
-",	c #7C4B4B",
-"'	c #635C5B",
-")	c #593A3A",
-"!	c #A66C6C",
-"~	c #5B3F3F",
-"{	c #8E8E8D",
-"]	c #686A66",
-"^	c #A36B6B",
-"/	c #A26565",
-"(	c #3D3D3C",
-"_	c #AFAFAD",
-":	c #272825",
-"<	c #643C3C",
-"[	c #A66B6B",
-"}	c #B4B4B3",
-"|	c #777A74",
-"1	c #2D1D1E",
-"2	c #462C2C",
-"3	c #372222",
-"4	c #503C38",
-"5	c #785A54",
-"6	c #9A5D5D",
-"7	c #ACADAA",
-"8	c #333332",
-"9	c #382829",
-"0	c #CEB6B5",
-"a	c #F1F0EC",
-"b	c #B2B2AE",
-"c	c #666664",
-"d	c #4B4B4A",
-"e	c #8F8F8E",
-"f	c #6A6B68",
-"g	c #281819",
-"h	c #483D3D",
-"i	c #796E6D",
-"j	c #D4CAC4",
-"k	c #E1E1DD",
-"l	c #B3B3B1",
-"m	c #292A29",
-"n	c #322323",
-"o	c #827672",
-"p	c #9F9894",
-"q	c #706C65",
-"r	c #201313",
-"s	c #120B0B",
-"                ",
-"                ",
-"                ",
-"      .+@@@@#   ",
-"     $%&***=-   ",
-"     ;>***,'-   ",
-"    )!****~{]   ",
-"   #^/****(_:   ",
-"   <[****=}|    ",
-"  123456,'78    ",
-"  90aabcdef     ",
-"  ghijaaklm     ",
-"     #nopq      ",
-"        rs      ",
-"                ",
-"                "};
