@@ -1,91 +1,0 @@
-/* XPM */
-static char * helpdoc_xpm[] = {
-"16 16 72 1",
-" 	c None",
-".	c #2B2B26",
-"+	c #707065",
-"@	c #474741",
-"#	c #000000",
-"$	c #7A7A6E",
-"%	c #B1B19F",
-"&	c #DDDDC5",
-"*	c #B6B6A4",
-"=	c #232323",
-"-	c #53534C",
-";	c #CBCBB5",
-">	c #D7D7C0",
-",	c #D8D8C2",
-"'	c #DDDDC6",
-")	c #E2E2CA",
-"!	c #89897B",
-"~	c #828282",
-"{	c #6F6F68",
-"]	c #CECEB8",
-"^	c #D7D7C1",
-"/	c #DBDBC3",
-"(	c #E1E1C9",
-"_	c #E6E6CE",
-":	c #D7D7C2",
-"<	c #4B4B44",
-"[	c #9E9E9C",
-"}	c #B2B2AF",
-"|	c #909081",
-"1	c #D6D6C0",
-"2	c #E0E0C8",
-"3	c #E8E8D0",
-"4	c #EBEBD3",
-"5	c #F0F0D7",
-"6	c #D0D0BA",
-"7	c #9F9F99",
-"8	c #80807A",
-"9	c #A4A492",
-"0	c #E4E4CC",
-"a	c #ECECD3",
-"b	c #EFEFD6",
-"c	c #F2F2D9",
-"d	c #F3F3DA",
-"e	c #1B1B1A",
-"f	c #B9B9A6",
-"g	c #D9D9C2",
-"h	c #E8E8CF",
-"i	c #EEEED5",
-"j	c #F4F4DB",
-"k	c #F5F5DC",
-"l	c #E9E9D1",
-"m	c #75756A",
-"n	c #5E5E59",
-"o	c #DADAC3",
-"p	c #E4E4CD",
-"q	c #BBBBA8",
-"r	c #E3E3CB",
-"s	c #E7E7CF",
-"t	c #9A9A8E",
-"u	c #EAEAD2",
-"v	c #DADAC4",
-"w	c #69695E",
-"x	c #43433C",
-"y	c #D2D2BD",
-"z	c #F1F1D8",
-"A	c #E7E7D0",
-"B	c #A9A997",
-"C	c #88887A",
-"D	c #68685E",
-"E	c #21211E",
-"F	c #919182",
-"G	c #2F2F2B",
-"                ",
-"                ",
-"       .+@      ",
-"     #$%&*      ",
-"   =-;>,')!     ",
-"   ~{]^/(_:<    ",
-"   [}|123456#   ",
-"   789/0abcd$   ",
-"   efg)hicjklm  ",
-"   no'plbckkkq# ",
-"   #grs45dkb$#  ",
-"    tsuicjvw    ",
-"    xybzAB      ",
-"     Cc)DE      ",
-"      FG        ",
-"                "};
